--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-pink-200 min-h-screen flex items-center justify-center p-4">
     <div class="bg-pink-400 w-[500px] rounded-2xl shadow-xl p-10 text-center">
-        <img src="/teddy-bear.svg" alt="Cute Pink Teddy Bear" class="mx-auto w-40 mb-4">
+        <img src="./teddy-bear.svg" alt="Cute Pink Teddy Bear" class="mx-auto w-40 mb-4">
         <h1 class="text-3xl font-bold text-white mb-8">Be My Valentine?</h1>
         <div class="flex justify-center gap-4">
             <button id="yesBtn" class="bg-pink-500 hover:bg-pink-600 border-2 border-pink-700 text-white font-bold py-3 px-8 rounded-md transition-all">Yes</button>
